--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxt/image-edge": "^1.0.0-27990059.c3f31ce",
     "@nuxtjs/tailwindcss": "^6.6.4",
     "autoprefixer": "^10.4.14",
     "nuxt": "^3.3.1",
