--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "autoprefixer": "^10.4.14",
     "nuxt": "^3.3.1",
     "postcss": "^8.4.21",
+    "prettier": "^2.8.7",
+    "prettier-plugin-tailwindcss": "^0.2.6",
     "sass": "^1.59.3",
     "sass-loader": "^13.2.1",
     "tailwindcss": "^3.2.7"
